Quickfix for overflow issue.

--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -26,6 +26,7 @@ body
   background #fbfbff
   box-shadow 0 1px 6px rgba(0,0,8,0.05)
   border 1px solid rgba(0,0,8,0.1)
+  overflow hidden
 
   > svg 
     filter drop-shadow(0px 2px 16px rgba(0, 0, 0, 0.066))
